--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <link href="css/style.css" rel="stylesheet">
-
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -77,7 +75,8 @@
       </footer>
     </div>
     <noscript id="deferred-styles">
-        <link rel="stylesheet" type="text/css" href="small.css"/>
+        <link rel="stylesheet" types="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="print.css"/>
     </noscript>
     <script>
     var loadDeferredStyles = function() {
