--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     <noscript id="deferred-styles">
         <link rel="stylesheet" types="text/css" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="print.css"/>
+        <link rel="stylesheet" type="text/css" href="css/print.css"/>
     </noscript>
     <script>
     var loadDeferredStyles = function() {
